trunk/Archive2/98/5875070624b594/output
main.cpp: In member function 'virtual void A::f()':
main.cpp:5:36: error: 'cout' was not declared in this scope
 class A {public: virtual void f() {cout<<"echo A";}};
                                    ^
main.cpp:5:36: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp: In member function 'virtual void B::f()':
main.cpp:6:46: error: 'cout' was not declared in this scope
 class B: public A {public: void f() {A::f(); cout<<"echo B";}};
                                              ^
main.cpp:6:46: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp: In member function 'virtual void C::f()':
main.cpp:7:46: error: 'cout' was not declared in this scope
 class C: public B {public: void f() {B::f(); cout<<"echo C\n";}};
                                              ^
main.cpp:7:46: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/4.8/iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp: In function 'int main()':
main.cpp:8:53: error: 'randomize' was not declared in this scope
 int main() {A *ptr; B b; C c; int flag=0; randomize(); flag = random(2);
                                                     ^
main.cpp:8:71: error: too many arguments to function 'long int random()'
 int main() {A *ptr; B b; C c; int flag=0; randomize(); flag = random(2);
                                                                       ^
In file included from /usr/include/c++/4.8/cstdlib:72:0,
                 from /usr/include/c++/4.8/ext/string_conversions.h:41,
                 from /usr/include/c++/4.8/bits/basic_string.h:2815,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:1:
/usr/include/stdlib.h:327:17: note: declared here
 extern long int random (void) __THROW;
                 ^
main.cpp:9:71: error: expected '}' at end of input
 switch (flag) {case 0: ptr=&b; break; case 1: ptr=&c; break;} ptr->f(); 
                                                                       ^
